fix: deployment cors error fixed